test/ingress-nginx/nginx-backend-test.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-backend-cfg
data:
  index.html1: |
    <h1>Hi, Ingress Nginx 1, here is Olivier</h1>
  index.html2: |
    <h1>Hi, Ingress Nginx 2, here is Olivier</h1>
---

# first backend minikube.ingress1.local
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-backend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-backend-pod-1
  template:
    metadata:
      labels:
        app: nginx-backend-pod-1
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            name: nginx-backend-cfg
            items:
              - key: index.html1
                path: index.html
---
# service for pod
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-1
spec:
  selector:
    app: nginx-backend-pod-1
  ports:
    - port: 80
      targetPort: 80


---
# second backend minikube.ingress1.local
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-backend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-backend-pod-2
  template:
    metadata:
      labels:
        app: nginx-backend-pod-2
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            name: nginx-backend-cfg
            items:
              - key: index.html2
                path: index.html
---
# service for pod
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
spec:
  selector:
    app: nginx-backend-pod-2
  ports:
    - port: 80
      targetPort: 80


---
# ingress def
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
    - host: minikube.ingress1.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-svc-1
              servicePort: 80
    - host: minikube.ingress2.local
      http:
        paths:
            - path: /
              backend:
                serviceName: nginx-svc-2
                servicePort: 80
---
#redirect ingress def
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: http://minikube.ingress2.local
spec:
  rules:
    - host: minikube.ingress.redirect
